--- a/read_data.ipynb
+++ b/read_data.ipynb
@@ -118,8 +118,18 @@
    "metadata": {}
   },
   {
+   "source": [
+    "### The selected categories are:\n",
+    "### * POLITICS\n",
+    "### * ENTERTAINMENT\n",
+    "### * TRAVEL"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +173,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 8
     }
    ],
    "source": [
@@ -172,14 +182,14 @@
   },
   {
    "source": [
-    "### The clustering will be based on the news headline"
+    "### The clustering will be based on the news headlines"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,8 +198,15 @@
    ]
   },
   {
+   "source": [
+    "### Saving the hedlines text into an pickle file"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
