--- a/similarity_visualization.ipynb
+++ b/similarity_visualization.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,17 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#words = words[:500]\n",
-    "#vectors = vectors[:500]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "indices = np.argwhere(sims > 0.65) ## pegamos todos onde a similaridade e maior que .65"
+    "indices = np.argwhere(sims > 0.65) ## we get those were the similarity is higher than .65"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +244,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 83
+     "execution_count": 13
     }
    ],
    "source": [
