--- a/w2v_model.ipynb
+++ b/w2v_model.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Time to train the model: 0.5962 mins\n"
+      "Time to train the model: 0.6256 mins\n"
      ]
     }
    ],
@@ -127,37 +127,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[('gun', 0.620539128780365),\n",
-       " ('shui', 0.6091277003288269),\n",
-       " ('owners', 0.6024693250656128),\n",
-       " ('mass', 0.5929380655288696),\n",
-       " ('feng', 0.5868189334869385),\n",
-       " ('carry', 0.5839115381240845),\n",
-       " ('shootings', 0.5771595239639282),\n",
-       " ('educate', 0.5662846565246582),\n",
-       " ('nightclubs', 0.5634212493896484),\n",
-       " ('educators', 0.5628822445869446)]"
+       "[('barack', 0.7298361659049988),\n",
+       " ('donald', 0.6451386213302612),\n",
+       " ('trump', 0.642876148223877),\n",
+       " ('administration', 0.6392666697502136),\n",
+       " ('president', 0.6343703866004944),\n",
+       " ('environmental', 0.5987725257873535),\n",
+       " ('congress', 0.5691197514533997),\n",
+       " ('deliver', 0.5623358488082886),\n",
+       " ('policy', 0.5582756996154785),\n",
+       " ('immigration', 0.5485448241233826)]"
       ]
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 9
     }
    ],
    "source": [
     "''' Checking for similar words '''\n",
-    "model.wv.most_similar(['guns'], topn=10)"
+    "model.wv.most_similar(['obama'], topn=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,21 +173,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('data/test.pkl', 'rb') as f:\n",
     "    test = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = random.sample(test, 100)"
    ]
   },
   {
@@ -199,7 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "For a batter visualization\n",
+    "we're going to use 100 random headlines\n",
+    "'''\n",
+    "test = random.sample(test, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -218,7 +222,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Word logline not found in vocab\nWord cho not found in vocab\nWord disbanded not found in vocab\nWord garagiste not found in vocab\nWord fried not found in vocab\nWord reposted not found in vocab\nWord steenburgen not found in vocab\nWord chastising not found in vocab\nWord maye not found in vocab\nWord alunageorge not found in vocab\nWord cosima not found in vocab\nWord deke not found in vocab\nWord dickerson not found in vocab\nWord attic not found in vocab\nWord romancing not found in vocab\n"
+      "Word unedited not found in vocab\nWord hashimoto not found in vocab\nWord illusions not found in vocab\nWord mantel not found in vocab\nWord romanticizing not found in vocab\nWord boone not found in vocab\nWord drunkenly not found in vocab\nWord durango not found in vocab\nWord gustave not found in vocab\nWord sats not found in vocab\nWord patriarch not found in vocab\nWord weaponizes not found in vocab\n"
      ]
     }
    ],
@@ -235,18 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "911"
+       "883"
       ]
      },
      "metadata": {},
-     "execution_count": 48
+     "execution_count": 15
     }
    ],
    "source": [
@@ -255,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
