--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -118,20 +118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = df.vector.to_list()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vecs = np.array(X)"
+    "X = df.vector.to_list()\n",
+    "vecs = np.array(X) ## get the nparray"
    ]
   },
   {
